<resources>
    <string name="app_name">MyTrackerPal</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="Signup">Don\'t have an account? <u>Sign Up</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_signup">Email</string>
    <string name="passwordlogin">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sign Up</string>
    <string name="login">Already have an account? <u>log in</u></string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">phone number</string>
</resources>