<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/plan"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_edit_calendar_24"
        android:title="@string/plan"/>
    <item
        android:id="@+id/track"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_app_registration_24"
        android:title="@string/track"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>



</menu>